# validatorclock

./: .gitignore  Cargo.toml  README.md  critique.json  install.sh  update.sh  validatorclock.json  validators_clock.json  validators_clock_history.json
.github/workflows/: ci.yml
deploy/: validatorclock.service  validators-clock.service
docs/: design-plan.md  optimization-plan.md
public/: app.js  index.html  jokes.json  styles.css
public/app/: analytics.js  api.js  clock.js  clock_defs.js  clock_model.js  clock_svg.js  format.js  format_addresses.js  format_dates.js  format_numbers.js  map.js  map_controls.js  map_data.js  map_events.js  map_features.js  map_geometry.js  map_layers.js  map_popup_state.js  map_popups.js  map_render.js  map_style.js  map_view.js  metrics.js  network_portraits.js  node_stats.js  round_stats_charts.js  round_stats_config.js  round_stats_data.js  round_stats_format.js  round_stats_panel.js  rounds.js  rounds_meta.js  rounds_options.js  rounds_recent.js  rounds_stats.js  runtime.js  runtime_chains.js  runtime_clock.js  runtime_messages.js  runtime_settings.js  (+22 more)
scripts/: check-js.sh  check-shell.sh  collect-tycho-map.sh  migrate_to_validatorclock.sh  visual-check.sh
src/: chain.rs  config.rs  decimal.rs  fsutil.rs  history.rs  logging.rs  main.rs  server.rs  state.rs  tls.rs  tycho_map.rs  validator_map.rs  validator_types.rs
src/chain/: dto.rs  elector.rs  mod.rs  refresh.rs  round_stats.rs  status.rs  toncenter_client.rs  util.rs  validator_sources.rs
src/config/: acme.rs  app.rs  mod.rs  security.rs  tests.rs  tls.rs
src/history/: mod.rs  participation.rs  retention.rs  stats.rs  storage.rs  store.rs  tests.rs  types.rs  window.rs
src/node_locations/: mod.rs
src/server/: acme.rs  api.rs  mod.rs  (+6 more)
(+66 files in other folders)
